Added compiler arg